<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topContainer"
        android:layout_width="0dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/userName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/userMobile"
            app:layout_constraintHorizontal_weight="1"/>

        <TextView
            android:id="@+id/userMobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/userName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/userEmail"
            app:layout_constraintHorizontal_weight="1"/>

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/userMobile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topContainer"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/updateBtn"
            android:minHeight="40dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/add_bg"
            android:text="@string/update"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/deleteBtn"/>

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="0dp"
            android:minHeight="40dp"
            android:layout_height="wrap_content"
            android:background="@drawable/delete_bg"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/updateBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.733" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/dividerLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLayout"
        android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>